--- a/index.html
+++ b/index.html
@@ -37,44 +37,39 @@
             <div id="bigOne">
                 <div id="leftSideInputs">
 
-                    <label for="firstName">FIRST NAME</label>
-                    <input type="text" id="firstName">
+                    <label for="firstName">*FIRST NAME</label>
+                    <input type="text" id="firstName" required maxlength="10" placeholder="First name...">
 
-                    <label for="email">EMAIL</label>
-                    <input type="email" id="email">
+                    <label for="email">*EMAIL</label>
+                    <input type="email" id="email" required placeholder="Email...">
 
-                    <label for="password">PASSWORD</label>
-                    <input type="password" id="password">
+                    <label for="password">*PASSWORD</label>
+                    <input type="password" id="password" required placeholder="Password...">
 
                 </div>
 
                 <div id="rightSideInputs">
 
-                    <label for="lastName">LAST NAME</label>
-                    <input type="text" id="lastName">
+                    <label for="lastName">*LAST NAME</label>
+                    <input type="text" id="lastName" required placeholder="Last name...">
 
                     <label for="telNumber">PHONE NUMBER</label>
-                    <input type="tel" id="telNumber">
+                    <input type="tel" id="telNumber" placeholder="Phone number...">
 
-                    <label for="confirmPassword">CONFIRM PASSWORD</label>
-                    <input type="password" id="confirmPassword">
+                    <label for="confirmPassword">*CONFIRM PASSWORD</label>
+                    <input type="password" id="confirmPassword" required placeholder="Confirm password...">
 
                 </div>
             </div>
 
+                <div id="footer">
+
+                    <button id="submitButton" type="submit"><b>Create Account</b></button>
+                    <p id="logIn"><b>Already have an account? <a href="ending.html" id="logInLink">Log in</a></b></p>
+
             </form>
-
-
         </div>
-
-        <div id="footer">
-
-            <button id="submitButton" type="submit"><b>Create Account</b></button>
-            <p id="logIn"><b>Already have an account? <a href="" id="logInLink">Log in</a></b></p>
-
-
-        </div>
-
+    </div>
     </div>
 
 </body>
